[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/player.png" type="Texture" id=1]
[ext_resource path="res://enemies/Zombie.gd" type="Script" id=2]
[ext_resource path="res://assets/green_button03.png" type="Texture" id=3]
[ext_resource path="res://assets/red_button00.png" type="Texture" id=4]
[ext_resource path="res://assets/Hurt01.wav" type="AudioStream" id=5]

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 0, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 5 ) ],
"loop": true,
"name": "die",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 17.8955

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 9, 24 )

[node name="Zombie" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
rotation = 1.5708
scale = Vector2( 3, 3 )
frames = SubResource( 1 )
animation = "walk"
offset = Vector2( 0, -4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Tween" type="Tween" parent="."]

[node name="Attack" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack"]
position = Vector2( 15, 0 )
shape = SubResource( 4 )

[node name="HPBar" type="TextureProgress" parent="."]
margin_left = -10.0
margin_top = -42.0
margin_right = 10.0
margin_bottom = -36.0
max_value = 3.0
value = 2.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 3 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HurtSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[connection signal="body_entered" from="Attack" to="." method="_on_Attack_body_entered"]
[connection signal="body_exited" from="Attack" to="." method="_on_Attack_body_exited"]
